--- a/src/main/resources/static/css/itemPage.css
+++ b/src/main/resources/static/css/itemPage.css
@@ -39,6 +39,7 @@
 
 /* Блок з деталями */
 .product-details {
+    width: 50%;
     flex: 1;
     padding: 40px;
     box-sizing: border-box;
@@ -46,12 +47,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
+
 }
 
 strong {
-    font-weight: normal; /* Забираємо жирний стиль */
-    font-family: 'Geomanist', sans-serif; /* Явно задаємо шрифт */
+    font-weight: normal;
+    /* Забираємо жирний стиль */
+    font-family: 'Geomanist', sans-serif;
+    /* Явно задаємо шрифт */
 }
 
 .product-details h2 {
@@ -69,17 +72,20 @@ strong {
 /* Стилізація статичних слів */
 .product-details strong {
     font-weight: bold;
-    color: #1a73e8; /* Синій для акценту */
+    color: #1a73e8;
+    /* Синій для акценту */
 }
 
 .price {
     font-size: 24px;
     font-weight: bold;
-    color: #d9534f; /* Червоний для ціни */
+    color: #d9534f;
+    /* Червоний для ціни */
 }
 
 .price del {
-    color: #888; /* Сірий для закресленої ціни */
+    color: #888;
+    /* Сірий для закресленої ціни */
 }
 
 #add-to-cart-btn {
@@ -93,15 +99,195 @@ strong {
     transition: background-color 0.3s ease;
 }
 
-button:hover {
+button {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    padding: 0;
+    font-size: 12px;
+}
+
+/* button:hover {
     background-color: #135aba;
 }
 
 button:active {
     background-color: #0d3e84;
-}
+} */
 
 .product-description {
     margin: 10px 30px;
     font-size: 18px;
+}
+
+.slider-container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.swiper-container {
+    width: 100%;
+}
+
+.main-slider {
+    width: 100%;
+    /* height: 100%;  */
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.thumbs-slider {
+    height: 80px;
+    /* Зменшено висоту мініатюр */
+}
+
+.thumbs-slider .swiper-slide {
+    height: 100%;
+    cursor: pointer;
+    opacity: 0.6;
+    transition: opacity 0.3s ease;
+}
+
+.thumbs-slider .swiper-slide-thumb-active {
+    opacity: 1;
+    border: 2px solid #007aff;
+}
+
+.main-slider .swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.main-slider .swiper-slide-prev {
+    opacity: 0;
+}
+
+
+
+
+.swiper-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    /* Зберігаємо пропорції зображень */
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+    background-color: #F5F5F5;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 20px 20px;
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+    display: none;
+}
+
+.swiper-button-prev {
+    background-image: url("img/back.svg");
+}
+
+.swiper-button-next {
+    background-image: url("img/right.svg");
+}
+
+.slider-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.slider-buttons {
+    display: flex;
+    align-items: center;
+}
+
+#main-slider-wrapper {
+    height: 40vw;
+}
+
+.same-seller-items-wrapper {
+    margin: 10px 30px;
+}
+
+
+.item-title {
+    padding: 0 10px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    box-orient: vertical;
+    overflow: hidden;
+}
+
+.item-price {
+    font-weight: bold;
+    font-size: 16px;
+    padding-left: 10px;
+}
+
+.item-price del {
+    font-weight: normal;
+}
+
+
+.item-brand {
+    font-weight: normal;
+    padding-left: 10px;
+}
+
+.item-discounted-price {
+    padding-left: 10px;
+    font-weight: bold;
+    font-size: 16px;
+    color: red;
+    padding-bottom: 5px;
+}
+
+.same-brand-items-title {
+    font-weight: bold;
+    font-size: 24px;
+    padding-bottom: 20px;
+}
+
+.same-brand-items-slider-container {
+    margin-bottom: 50px;
+}
+
+#same-brand-items-slider-wrapper .swiper-slide {
+    border-left: 1px #bbbbbb solid;
+    border-bottom: 1px #bbbbbb solid;
+
+}
+
+.item-image-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 13vw;
+}
+
+#same-brand-items-slider-wrapper .swiper-slide img {
+    width: 90%;
+    object-fit: contain;
+}
+
+.item-price-no-discount {
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
+.item-title-wrapper {
+    height: 40px;
 }
