--- a/src/main/resources/templates/profileInfoFilling.html
+++ b/src/main/resources/templates/profileInfoFilling.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fill your info</title>
-    <meta name="_csrf" th:content="${_csrf.token}" />
-    <meta name="_csrf_header" th:content="${_csrf.headerName}" />
+<!--    <meta name="_csrf" th:content="${_csrf.token}" />-->
+<!--    <meta name="_csrf_header" th:content="${_csrf.headerName}" />-->
     <!--    <link rel="stylesheet" href="../static/css/libraries/cropper.css" />-->
     <link rel="stylesheet" href="/css/libraries/cropper.css" />
     <!--    <link rel="stylesheet" href="../static/css/fillingInfo.css">-->
