Item page opening try

--- a/src/main/resources/templates/itemPage.html
+++ b/src/main/resources/templates/itemPage.html
@@ -4,34 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/libraries/swiper.min.css">
+    <!-- <link rel="stylesheet" href="../static/css/libraries/swiper.min.css">
     <link rel="stylesheet" href="../static/css/itemPage.css">
-    <link rel="stylesheet" href="../static/css/header.css">
+    <link rel="stylesheet" href="../static/css/header.css"> -->
+    <link rel="stylesheet" href="/css/libraries/swiper.min.css">
+    <link rel="stylesheet" href="/css/itemPage.css">
+    <link rel="stylesheet" href="/css/header.css">
     <title>Item Page</title>
 </head>
 
 <body>
+
     <header>
         <div class="header-wrapper">
             <div class="logo">
-                <img src="../static/css/img/logo.png" id="logo-desktop" alt="logo">
-                <img src="../static/css/img/logo-mobile.png" id="logo-mobile" alt="">
+                <!-- <img src="../static/css/img/logo.png" id="logo-desktop" alt="logo">
+                <img src="../static/css/img/logo-mobile.png" id="logo-mobile" alt=""> -->
+                <img src="/css/img/logo.png" id="logo-desktop" alt="logo">
+                <img src="/css/img/logo-mobile.png" id="logo-mobile" alt="">
             </div>
             <div class="search-wrapper">
 
                 <input type="text" id="search-bar" placeholder="Search...">
-                <img src="../static/css/img/search-icon.png" alt="" id="search-icon">
+                <img src="/css/img/search-icon.png" alt="" id="search-icon">
+                <!-- <img src="../static/css/img/search-icon.png" alt="" id="search-icon"> -->
                 <button id="search-button">Search</button>
 
             </div>
 
             <div class="signup-badge">
-                <img src="../static/css/img/default-user.png" id="default-user-icon" alt="">
+                <img src="/css/img/default-user.png" id="default-user-icon" alt="">
+                <!-- <img src="../static/css/img/default-user.png" id="default-user-icon" alt=""> -->
                 <p id="user-name-header"><u> Login/Sign Up</u></p>
             </div>
 
             <div class="cart-container">
-                <img src="../static/css/img/cart-icon.png" alt="Cart" class="cart-icon" id="cart-icon">
+                <img src="/css/img/cart-icon.png" alt="Cart" class="cart-icon" id="cart-icon">
+                <!-- <img src="../static/css/img/cart-icon.png" alt="Cart" class="cart-icon" id="cart-icon"> -->
                 <span class="cart-badge">0</span>
             </div>
         </div>
@@ -92,9 +101,12 @@
 
     </div>
 
-    <script src="../static/js/libraries/swiper.min.js"></script>
+    <script src="/js/libraries/swiper.min.js"></script>
+    <script src="/js/shoppingCart.js"></script>
+    <script src="/js/itemPage.js"></script>
+    <!-- <script src="../static/js/libraries/swiper.min.js"></script>
     <script src="../static/js/shoppingCart.js"></script>
-    <script src="../static/js/itemPage.js"></script>
+    <script src="../static/js/itemPage.js"></script> -->
 
 </body>
 
