--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--    <meta name="_csrf" th:content="${_csrf.token}"/>-->
-<!--    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
+    <meta name="_csrf" th:content="${_csrf.token}" />
+    <meta name="_csrf_header" th:content="${_csrf.headerName}" />
 
     <!-- Для роботи з динамічним css -->
-   <link rel="stylesheet" href="../static/css/login-style.css">
+    <link rel="stylesheet" href="../static/css/login-style.css">
     <!-- Для роботи сервера -->
-     <link rel="stylesheet" href="/css/login-style.css">
+    <link rel="stylesheet" href="/css/login-style.css">
     <title>Login Page</title>
 </head>
 
@@ -37,11 +37,11 @@
             <div class="line"></div>
             <div class="buttons-with-icon">
                 <button class="button-with-icon" id="github-registration"><img src="/css/img/github.png" alt="icon"
-                    style="width: 30px; height: 30px; margin-right: 8px;">
-                Continue with GitHub</button>
-            <button class="button-with-icon" id="google-registration"><img src="/css/img/google.webp" alt="icon"
-                style="width: 30px; height: 30px; margin-right: 8px;">
-            Continue with Google</button>
+                        style="width: 30px; height: 30px; margin-right: 8px;">
+                    Continue with GitHub</button>
+                <button class="button-with-icon" id="google-registration"><img src="/css/img/google.webp" alt="icon"
+                        style="width: 30px; height: 30px; margin-right: 8px;">
+                    Continue with Google</button>
             </div>
 
             <!-- <p class="sign-up-text">Don't have an account? <a href="signup.html"><b>Sign up!</b></a></p>
@@ -49,7 +49,7 @@
                 <!-- Для роботи сервера -->
             <p class="sign-up-text">Don't have an account? <a href="/signUpPage"><b>Sign up!</b></a></p>
 
-           
+
         </div>
 
     </div>
