--- a/src/main/resources/templates/mainGallery.html
+++ b/src/main/resources/templates/mainGallery.html
@@ -3,27 +3,28 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YEP! Store</title>
 
     <!-- Для роботи з динамічним css -->
-    <link rel="stylesheet" href="../static/css/mainGallery.css">
-    <link rel="stylesheet" href="../static/css/header.css">
+    <!-- <link rel="stylesheet" href="../static/css/mainGallery.css">
+    <link rel="stylesheet" href="../static/css/header.css"> -->
 
     <!-- Для роботи сервера -->
-    <!-- <link rel="stylesheet" href="/css/mainGallery.css"> -->
+    <link rel="stylesheet" href="/css/mainGallery.css">
+    <link rel="stylesheet" href="/css/header.css">
 </head>
 
 <body>
     <header>
         <div class="header-wrapper">
             <div class="logo">
-                <img src="../static/css/img/logo.png" alt="logo">
+                <img src="/css/img/logo.png" alt="logo">
             </div>
             <div class="search-wrapper">
 
                 <input type="text" id="search-bar" placeholder="Search...">
-                <img src="../static/css/img/search-icon.png" alt="" id="search-icon">
+                <img src="/css/img/search-icon.png" alt="" id="search-icon">
                 <button id="search-button">Search</button>
 
 
@@ -31,11 +32,11 @@
             </div>
 
             <div class="signup-badge">
-                <img src="../static/css/img/default-user.png" id="default-user-icon" alt="">
+                <img src="/css/img/default-user.png" id="default-user-icon" alt="">
                 <p><u> Login/Sign Up</u></p>
             </div>
             <div class="cart-container">
-                <img src="../static/css/img/cart-icon.png" alt="Cart" class="cart-icon" id="cart-icon">
+                <img src="/css/img/cart-icon.png" alt="Cart" class="cart-icon" id="cart-icon">
                 <span class="cart-badge">0</span>
             </div>
         </div>
@@ -63,8 +64,11 @@
 
 
     <!-- Для роботи з динамічним js -->
-    <script src="../static/js/galleryPage.js"></script>
-    <script src="../static/js/shoppingCart.js"></script>
+    <!-- <script src="../static/js/galleryPage.js"></script>
+    <script src="../static/js/shoppingCart.js"></script> -->
+
+    <script src="/js/galleryPage.js"></script>
+    <script src="/js/shoppingCart.js"></script>
 
 
 
