--- a/src/main/resources/static/css/mainGallery.css
+++ b/src/main/resources/static/css/mainGallery.css
@@ -74,7 +74,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Масштабування зображення, щоб воно не спотворювалось */
+    object-fit: contain; /* Масштабування зображення, щоб воно не спотворювалось */
     border-radius: 8px;
 }
 
