--- a/src/main/resources/static/css/sellerPage.css
+++ b/src/main/resources/static/css/sellerPage.css
@@ -405,6 +405,7 @@ img[alt="The image to crop"] {
     width: 150px;
     height: 150px;
     transition: opacity 0.3s ease;
+    object-fit: contain;
 }
 
 .edit-image-wrapper::after,
