--- a/src/main/resources/templates/mainGallery.html
+++ b/src/main/resources/templates/mainGallery.html
@@ -19,24 +19,32 @@
     <header>
         <div class="header-wrapper">
             <div class="logo">
-                <img src="/css/img/logo.png" alt="logo">
+                <a href="/mainpage">
+                    <!-- <img src="../static/css/img/logo.png" id="logo-desktop" alt="logo">
+                    <img src="../static/css/img/logo-mobile.png" id="logo-mobile" alt=""> -->
+                    <img src="/css/img/logo.png" id="logo-desktop" alt="logo">
+                    <img src="/css/img/logo-mobile.png" id="logo-mobile" alt="">
+                </a>
+
             </div>
             <div class="search-wrapper">
 
                 <input type="text" id="search-bar" placeholder="Search...">
                 <img src="/css/img/search-icon.png" alt="" id="search-icon">
+                <!-- <img src="../static/css/img/search-icon.png" alt="" id="search-icon"> -->
                 <button id="search-button">Search</button>
-
-
 
             </div>
 
             <div class="signup-badge">
                 <img src="/css/img/default-user.png" id="default-user-icon" alt="">
-                <p><u> Login/Sign Up</u></p>
+                <!-- <img src="../static/css/img/default-user.png" id="default-user-icon" alt=""> -->
+                <p id="user-name-header"><u> Login/Sign Up</u></p>
             </div>
+
             <div class="cart-container">
                 <img src="/css/img/cart-icon.png" alt="Cart" class="cart-icon" id="cart-icon">
+                <!-- <img src="../static/css/img/cart-icon.png" alt="Cart" class="cart-icon" id="cart-icon"> -->
                 <span class="cart-badge">0</span>
             </div>
         </div>
@@ -68,7 +76,9 @@
     <script src="../static/js/shoppingCart.js"></script> -->
 
     <script src="/js/galleryPage.js"></script>
+    <script src="/js/isUserAuthenticated.js"></script>
     <script src="/js/shoppingCart.js"></script>
+    
 
 
 
