--- a/src/main/resources/templates/sellerPage.html
+++ b/src/main/resources/templates/sellerPage.html
@@ -18,24 +18,32 @@
     <header>
         <div class="header-wrapper">
             <div class="logo">
-                <img src="/css/img/logo.png" id="logo-desktop" alt="logo">
-                <img src="/css/img/logo-mobile.png" id="logo-mobile" alt="">
+                <a href="/mainpage">
+                    <!-- <img src="../static/css/img/logo.png" id="logo-desktop" alt="logo">
+                    <img src="../static/css/img/logo-mobile.png" id="logo-mobile" alt=""> -->
+                    <img src="/css/img/logo.png" id="logo-desktop" alt="logo">
+                    <img src="/css/img/logo-mobile.png" id="logo-mobile" alt="">
+                </a>
+
             </div>
             <div class="search-wrapper">
 
                 <input type="text" id="search-bar" placeholder="Search...">
                 <img src="/css/img/search-icon.png" alt="" id="search-icon">
+                <!-- <img src="../static/css/img/search-icon.png" alt="" id="search-icon"> -->
                 <button id="search-button">Search</button>
 
             </div>
 
             <div class="signup-badge">
                 <img src="/css/img/default-user.png" id="default-user-icon" alt="">
+                <!-- <img src="../static/css/img/default-user.png" id="default-user-icon" alt=""> -->
                 <p id="user-name-header"><u> Login/Sign Up</u></p>
             </div>
 
             <div class="cart-container">
                 <img src="/css/img/cart-icon.png" alt="Cart" class="cart-icon" id="cart-icon">
+                <!-- <img src="../static/css/img/cart-icon.png" alt="Cart" class="cart-icon" id="cart-icon"> -->
                 <span class="cart-badge">0</span>
             </div>
         </div>
@@ -58,7 +66,7 @@
 <div class="seller-info-wrapper">
     <div class="seller-image-wrapper">
         <img id="seller-photo" alt="Seller Photo" src="path-to-image.jpg">
-        <input type="file" id="seller-photo-input" style="display: none;">
+        <input type="file" id="seller-photo-input" style="display: none;" accept="image/*">
     </div>
 
     <div class="seller-info-container">  
@@ -99,8 +107,7 @@
             <span class="close-btn" id="closeModalBtn">&times;</span>
             <h3>Add an Item</h3>
             <form>
-                <input type="file" style="opacity: 0; pointer-events: none;" id="fileInput" name="file" required
-                    accept="image/*" />
+                <input type="file" style="opacity: 0; pointer-events: none;" id="fileInput" name="file" accept="image/*" />
 
                 <!-- Іконка для завантаження фото -->
                 <div class="addPhotoImgContainer">
