--- a/src/main/resources/templates/mainGallery.html
+++ b/src/main/resources/templates/mainGallery.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YEP! Store</title>
-
+    <meta name="_csrf" th:content="${_csrf.token}" />
+    <meta name="_csrf_header" th:content="${_csrf.headerName}" />
     <!-- Для роботи з динамічним css -->
     <!-- <link rel="stylesheet" href="../static/css/mainGallery.css">
     <link rel="stylesheet" href="../static/css/header.css"> -->
